# gapp

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.gemini/: settings.json
.github/workflows/: deploy.yml
docs/: CI.md  SECRETS.md
gapp/: __init__.py
gapp/admin/cli/: main.py
gapp/admin/mcp/: server.py
gapp/admin/sdk/: ci.py  config.py  context.py  core.py  deploy.py  deployments.py  init.py  manifest.py  mcp_status.py  models.py  schema.py  secrets.py  self_install.py  setup.py  solutions.py  status.py  tokens.py  users.py
gapp/admin/sdk/cloud/: __init__.py  base.py  dummy.py  gcp.py
gapp/cli/: main.py
gapp/modules/cloud-run-service/: main.tf  variables.tf
gapp/sdk/: config.py  context.py  deploy.py  init.py  manifest.py  secrets.py  solutions.py  tokens.py  users.py
gapp/templates/: Dockerfile  cloudbuild.yaml
gapp/terraform/: main.tf  variables.tf
hooks/: hooks.json
modules/cloud-run-service/: main.tf  outputs.tf  variables.tf
run/: pyproject.toml
run/gapp_run/: __init__.py  wrapper.py
run/gapp_run/auth/: cache.py  middleware.py
run/gapp_run/auth/strategies/: __init__.py  bearer.py  google_oauth2.py
run/tests/unit/: test_cache.py  test_middleware.py
run/tests/unit/strategies/: test_bearer.py  test_google_oauth2.py  test_resolution.py
scripts/: release.py
skills/deploy/: SKILL.md
skills/develop/: SKILL.md
skills/secrets/: SKILL.md
skills/user-management/: SKILL.md
terraform/: main.tf  variables.tf
tests/: conftest.py
tests/unit/: test_config.py  test_context.py  test_deploy.py  test_gcp_submit_build.py  test_init.py  test_manifest.py  test_parsing.py  test_secrets.py  test_setup.py  test_solutions.py  test_status.py  test_tokens.py  test_users.py
