[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapp"
version = "2.1.0"
description = "GCP App Deployer — CLI tool for deploying Cloud Run services with Terraform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/krisrowe/gapp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gapp = "gapp.admin.cli.main:cli_entry"
gapp-mcp = "gapp.admin.mcp.server:main"

[tool.setuptools.packages.find]
include = ["gapp*"]

[tool.setuptools.package-data]
gapp = ["templates/*", "terraform/*", "features.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
